Generate Copasi Client
