# compose_api/api/main.py
@@ -46,7 +46,7 @@ APP_ORIGINS = [
 #     {"url": ServerMode.PORT_FORWARD_DEV, "description": "Local port-forward"},
 # ]
 APP_SERVERS = None
-APP_ROUTERS = ["core", "simulators"]  # for now, just referencing core
+APP_ROUTERS = ["core", "simulators", "simulator_tools"]  # for now, just referencing core
 assets_dir = Path(get_settings().assets_dir)
 ACTIVE_URL = ServerMode.detect(assets_dir / "dev" / "config" / ".dev_env")
 
